updated css and spacing issues

--- a/success.css
+++ b/success.css
@@ -1,1 +1,14 @@
-TEST
+
+#twinkie {
+  display: block;
+  margin: 100px auto 0 auto;
+}
+
+#vaultdoor {
+  display: block;
+  margin: 0 auto;
+}
+
+#prize {
+  text-align: center;
+}
